# 2022-CPL-Coding

./: CMakeLists.txt  README.md  a+b_program.c  guessNumber.c
10.14_class_4/: CMakeLists.txt  binary-search.c  digit.c  palindrome.c  prime.c  selection-sort.c  stars.c
10.14_class_4/Homework/: CMakeLists.txt  Quick-sort.c  decimal.c  flip.c  josephus.c  palindrome.c  statistics.c
10.21_class_5/: CMakeLists.txt  bubble-sort.c  game-of-life.c  merge.c
10.21_class_5/Homework/: CMakeLists.txt  life.c  martix-mult.c  mines.c  random.c  sudoku.c
10.28_class_6/Homework/: CMakeLists.txt  b.c  c.c  d.c  e.c  f.c
10.7_class_3/: CMakeLists.txt  leapYear.c  min.c  minOfASetOfNumbers.c
10.7_class_3/Homework/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  obstacleOptimized.c  series.c  single.c
11.11_class_8/: CMakeLists.txt  floatRange.c  getTime.c  mergesort.c
11.11_class_8/Homework/: CMakeLists.txt  brackets.c  buddy.c  buddyByCWH.c  buddyByLHY.c  buddyByPBS.c  cuboid.c  inputGenerate.c  inputOfBuddy.txt  pour.c  rotate.c  wine.c
11.18_class_9/: CMakeLists.txt  radius.c  selection.c
11.18_class_9/homework/: CMakeLists.txt  intepreter.c  substr.c  title.c
11.25_class_10/homework/: parse.c  stringcat.c  (+1 more)
12.2_class_11/: CMakeLists.txt  scores.c  selection-sort-string.c
12.9_class_12/: CMakeLists.txt  deci.c  integrete.c  sort.c
2022-Project-1/: calculator.c
9.23 class 1/: hello,world.c
9.30_class_2/: AAdminSystem.c  AAdminSystemScan.c  CMakeLists.txt  circle.c  mul.c  sphere  sphere.c  summary.txt
CPL-ProblemSet/: A.c  c.c  e.c  stack.c
(+23 files in other folders)
