cmake_minimum_required(VERSION 3.23)
project(2022_CPL_Coding C)

set(CMAKE_C_STANDARD 11)

#add_subdirectory(11.11_class_8/Homework)
#add_subdirectory(11.11_class_8)
#add_subdirectory(CPL-ProblemSet)
#add_subdirectory(11.18_class_9/homework)
#add_subdirectory(11.25_class_10/homework)
#add_subdirectory(2022-Project-1)
#add_subdirectory(12.2_class_11)
#add_subdirectory(12.9_class_12)
#add_subdirectory(12.9_class_12/homework)
add_subdirectory(Miscellaneous_Projects/gym_chemical_problem)